--- a/src/lib/Cargo.toml
+++ b/src/lib/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 proc = { path = "../proc" }
+helpers = { path = "../helpers" }
 phf = { version = "0.12.1", features = ["macros"] }
 tungstenite = "0.27.0"
