--- a/src/proc/Cargo.toml
+++ b/src/proc/Cargo.toml
@@ -8,6 +8,7 @@ proc-macro = true
 path = "src/macros.rs"
 
 [dependencies]
+helpers = { path = "../helpers" }
 proc-macro-error = "1.0.4"
 proc-macro2 = "1.0.95"
 quote = "1.0.40"
